it's incredible, but the nightly build of maven site now ran into PermGen space out of memory error. Let's increase it a bit then, hoping that'll help
git-svn-id: https://scm.mmbase.org/mmbase/trunk@31678 91430c5f-d668-0410-9e7d-dd663366dcfd